// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicList renders data properly on big screens 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="List"
        style="position: relative; height: 860px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 1410px; width: 100%;"
        >
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 0px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <img
                alt="Character"
                class="MuiBox-root css-b5dlu6"
                src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                >
                  Rick Sanchez
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <div
                    class="MuiBox-root css-lxhyqj"
                    style="background-color: rgb(85, 204, 68);"
                  />
                  Alive | Human | Male
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  Last known location:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  Citadel of Ricks
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  First seen in:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  Pilot
                </p>
              </div>
            </div>
          </div>
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 470px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <img
                alt="Character"
                class="MuiBox-root css-b5dlu6"
                src="https://rickandmortyapi.com/api/character/avatar/2.jpeg"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                >
                  Morty Smith
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <div
                    class="MuiBox-root css-lxhyqj"
                    style="background-color: rgb(85, 204, 68);"
                  />
                  Alive | Human | Male
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  Last known location:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  Citadel of Ricks
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  First seen in:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  Pilot
                </p>
              </div>
            </div>
          </div>
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 940px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <img
                alt="Character"
                class="MuiBox-root css-b5dlu6"
                src="https://rickandmortyapi.com/api/character/avatar/3.jpeg"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                >
                  Summer Smith
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <div
                    class="MuiBox-root css-lxhyqj"
                    style="background-color: rgb(85, 204, 68);"
                  />
                  Alive | Human | Female
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  Last known location:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  Earth (Replacement Dimension)
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  First seen in:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  Rick Potion #9
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="List"
      style="position: relative; height: 860px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
    >
      <div
        style="height: 1410px; width: 100%;"
      >
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 0px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <img
              alt="Character"
              class="MuiBox-root css-b5dlu6"
              src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
              >
                Rick Sanchez
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <div
                  class="MuiBox-root css-lxhyqj"
                  style="background-color: rgb(85, 204, 68);"
                />
                Alive | Human | Male
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                Last known location:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                Citadel of Ricks
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                First seen in:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Pilot
              </p>
            </div>
          </div>
        </div>
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 470px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <img
              alt="Character"
              class="MuiBox-root css-b5dlu6"
              src="https://rickandmortyapi.com/api/character/avatar/2.jpeg"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
              >
                Morty Smith
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <div
                  class="MuiBox-root css-lxhyqj"
                  style="background-color: rgb(85, 204, 68);"
                />
                Alive | Human | Male
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                Last known location:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                Citadel of Ricks
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                First seen in:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Pilot
              </p>
            </div>
          </div>
        </div>
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 940px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <img
              alt="Character"
              class="MuiBox-root css-b5dlu6"
              src="https://rickandmortyapi.com/api/character/avatar/3.jpeg"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
              >
                Summer Smith
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <div
                  class="MuiBox-root css-lxhyqj"
                  style="background-color: rgb(85, 204, 68);"
                />
                Alive | Human | Female
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                Last known location:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                Earth (Replacement Dimension)
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                First seen in:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Rick Potion #9
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DynamicList renders data properly on small screens 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="List"
        style="position: relative; height: 860px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 1410px; width: 100%;"
        >
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 0px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <img
                alt="Character"
                class="MuiBox-root css-b5dlu6"
                src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                >
                  Rick Sanchez
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <div
                    class="MuiBox-root css-lxhyqj"
                    style="background-color: rgb(85, 204, 68);"
                  />
                  Alive | Human | Male
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  Last known location:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  Citadel of Ricks
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  First seen in:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  Pilot
                </p>
              </div>
            </div>
          </div>
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 470px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <img
                alt="Character"
                class="MuiBox-root css-b5dlu6"
                src="https://rickandmortyapi.com/api/character/avatar/2.jpeg"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                >
                  Morty Smith
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <div
                    class="MuiBox-root css-lxhyqj"
                    style="background-color: rgb(85, 204, 68);"
                  />
                  Alive | Human | Male
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  Last known location:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  Citadel of Ricks
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  First seen in:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  Pilot
                </p>
              </div>
            </div>
          </div>
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 940px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <img
                alt="Character"
                class="MuiBox-root css-b5dlu6"
                src="https://rickandmortyapi.com/api/character/avatar/3.jpeg"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                >
                  Summer Smith
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <div
                    class="MuiBox-root css-lxhyqj"
                    style="background-color: rgb(85, 204, 68);"
                  />
                  Alive | Human | Female
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  Last known location:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  Earth (Replacement Dimension)
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  First seen in:
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  Rick Potion #9
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="List"
      style="position: relative; height: 860px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
    >
      <div
        style="height: 1410px; width: 100%;"
      >
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 0px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <img
              alt="Character"
              class="MuiBox-root css-b5dlu6"
              src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
              >
                Rick Sanchez
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <div
                  class="MuiBox-root css-lxhyqj"
                  style="background-color: rgb(85, 204, 68);"
                />
                Alive | Human | Male
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                Last known location:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                Citadel of Ricks
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                First seen in:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Pilot
              </p>
            </div>
          </div>
        </div>
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 470px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <img
              alt="Character"
              class="MuiBox-root css-b5dlu6"
              src="https://rickandmortyapi.com/api/character/avatar/2.jpeg"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
              >
                Morty Smith
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <div
                  class="MuiBox-root css-lxhyqj"
                  style="background-color: rgb(85, 204, 68);"
                />
                Alive | Human | Male
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                Last known location:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                Citadel of Ricks
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                First seen in:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Pilot
              </p>
            </div>
          </div>
        </div>
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 940px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <img
              alt="Character"
              class="MuiBox-root css-b5dlu6"
              src="https://rickandmortyapi.com/api/character/avatar/3.jpeg"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
              >
                Summer Smith
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <div
                  class="MuiBox-root css-lxhyqj"
                  style="background-color: rgb(85, 204, 68);"
                />
                Alive | Human | Female
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                Last known location:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                Earth (Replacement Dimension)
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                First seen in:
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Rick Potion #9
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DynamicList renders empty component  properly on small screens 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="List"
        style="position: relative; height: 860px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 1410px; width: 100%;"
        >
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 0px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                  style="display: block;"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
              </div>
            </div>
          </div>
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 470px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                  style="display: block;"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
              </div>
            </div>
          </div>
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 940px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                  style="display: block;"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        test empty component
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="List"
      style="position: relative; height: 860px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
    >
      <div
        style="height: 1410px; width: 100%;"
      >
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 0px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                style="display: block;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 470px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                style="display: block;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 940px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                style="display: block;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      test empty component
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DynamicList renders empty component properly on big screens 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="List"
        style="position: relative; height: 860px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 1410px; width: 100%;"
        >
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 0px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                  style="display: block;"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
              </div>
            </div>
          </div>
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 470px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                  style="display: block;"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
              </div>
            </div>
          </div>
          <div
            class="ListItem"
            style="position: absolute; left: 0px; top: 940px; height: 470px; width: 100%;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
              />
              <div
                class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                  style="display: block;"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h4>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        test empty component
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="List"
      style="position: relative; height: 860px; width: 300px; overflow: auto; will-change: transform; direction: ltr;"
    >
      <div
        style="height: 1410px; width: 100%;"
      >
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 0px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                style="display: block;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 470px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                style="display: block;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="ListItem"
          style="position: absolute; left: 0px; top: 940px; height: 470px; width: 100%;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1veoebb-MuiPaper-root-MuiCard-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-elit98-MuiSkeleton-root"
            />
            <div
              class="MuiCardContent-root css-p5jh9q-MuiCardContent-root"
            >
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1kt8trn-MuiTypography-root"
                style="display: block;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h4>
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-1wniyei-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-h94hhy-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                />
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      test empty component
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DynamicList renders loading skeleton properly on small screens 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiBox-root css-ib9iq6"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1ak0xjt-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-o4xdcr-MuiTypography-root"
        >
          Loading
        </h5>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiBox-root css-ib9iq6"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1ak0xjt-MuiCircularProgress-root"
        role="progressbar"
        style="width: 80px; height: 80px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
      <h5
        class="MuiTypography-root MuiTypography-h5 css-o4xdcr-MuiTypography-root"
      >
        Loading
      </h5>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DynamicList renders loading spinner properly on big screens 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiBox-root css-ib9iq6"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1ak0xjt-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-o4xdcr-MuiTypography-root"
        >
          Loading
        </h5>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiBox-root css-ib9iq6"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1ak0xjt-MuiCircularProgress-root"
        role="progressbar"
        style="width: 80px; height: 80px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
      <h5
        class="MuiTypography-root MuiTypography-h5 css-o4xdcr-MuiTypography-root"
      >
        Loading
      </h5>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
